<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/daftarkan_diri_anda_sekarang"
            android:textColor="@color/primary_color"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/abu_color"
            app:boxBackgroundColor="@color/white_color"
            app:boxStrokeColor="@color/abu_color"
            app:errorEnabled="true"
            app:hintTextColor="@color/abu_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/masukkan_nama_anda"
                android:imeActionId="0"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/abu_color"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/alamat_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/abu_color"
            app:boxBackgroundColor="@color/white_color"
            app:boxStrokeColor="@color/abu_color"
            app:errorEnabled="true"
            app:hintTextColor="@color/abu_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_text_input">

            <EditText
                android:id="@+id/alamat_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/masukkan_alamat_anda"
                android:imeActionId="1"
                android:inputType="text"
                android:textColor="@color/abu_color"
                android:textColorHint="@color/abu_color"
                tools:ignore="TextContrastCheck,TextContrastCheck,SpeakableTextPresentCheck"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/abu_color"
            app:boxBackgroundColor="@color/white_color"
            app:boxStrokeColor="@color/abu_color"
            app:errorEnabled="true"
            app:hintTextColor="@color/abu_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alamat_text_input">

            <EditText
                android:id="@+id/phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/masukkan_nomor_anda"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:imeActionId="2"
                android:importantForAutofill="no"
                android:inputType="number|phone"
                android:textColor="@color/abu_color"
                android:textColorHint="@color/abu_color"
                tools:ignore="TextContrastCheck,TextContrastCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_jenis_kelamin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/jenis_kelamin"
            android:textColor="@color/primary_color"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_text_input" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:background="#024CAF50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_jenis_kelamin">

            <RadioButton
                android:id="@+id/radio_laki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:minHeight="48dp"
                android:text="@string/laki_laki"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/radio_perempuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:minHeight="48dp"
                android:text="@string/perempuan"
                android:textSize="14sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/tv_lokasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/lokasi_pendaftaran"
            android:textColor="@color/primary_color"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group" />

        <TextView
            android:id="@+id/tv_current_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_text_input"
            android:padding="16dp"
            android:text="@string/lokasi_anda"
            android:textAlignment="viewStart"
            android:textColor="@color/abu_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_lokasi" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cek_lokasi"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/shape_black"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/cek_lokasi"
            android:textAllCaps="false"
            android:textColor="@color/white_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_foto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/aploud_foto"
            android:textColor="@color/primary_color"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group" />

        <ImageView
            android:id="@+id/iv_foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/white_color"
            android:contentDescription="@string/foto"
            app:srcCompat="@drawable/ic_baseline_add_24" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/shape_black"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white_color"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>