<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="8dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_nomor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/primary_color"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="1." />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label_nama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/nama"
                    android:textColor="@color/primary_color"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/tv_nomor"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="viewStart"
                    android:textColor="@color/abu_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_nomor"
                    app:layout_constraintTop_toBottomOf="@+id/label_nama"
                    tools:text="@string/nama" />

                <TextView
                    android:id="@+id/label_alamat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/alamat"
                    android:textColor="@color/primary_color"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/tv_nomor"
                    app:layout_constraintTop_toBottomOf="@+id/tv_nama" />

                <TextView
                    android:id="@+id/tv_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="viewStart"
                    android:textColor="@color/abu_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/tv_nomor"
                    app:layout_constraintTop_toBottomOf="@+id/label_alamat"
                    tools:text="@string/alamat" />

                <TextView
                    android:id="@+id/label_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/no_hp"
                    android:textColor="@color/primary_color"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/tv_nomor"
                    app:layout_constraintTop_toBottomOf="@+id/tv_alamat" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="viewStart"
                    android:textColor="@color/abu_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/tv_nomor"
                    app:layout_constraintTop_toBottomOf="@+id/label_phone"
                    tools:text="@string/no_hp" />


                <TextView
                    android:id="@+id/label_lokasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/lokasi_pendaftaran"
                    android:textColor="@color/primary_color"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/tv_nomor"
                    app:layout_constraintTop_toBottomOf="@+id/tv_gender" />

                <TextView
                    android:id="@+id/tv_lokasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="viewStart"
                    android:textColor="@color/abu_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/tv_nomor"
                    app:layout_constraintTop_toBottomOf="@+id/label_lokasi"
                    tools:text="Surakarta" />

                <TextView
                    android:id="@+id/label_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/jenis_kelamin"
                    android:textColor="@color/primary_color"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/tv_nomor"
                    app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

                <TextView
                    android:id="@+id/tv_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="viewStart"
                    android:textColor="@color/abu_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/tv_nomor"
                    app:layout_constraintTop_toBottomOf="@+id/label_gender"
                    tools:text="Laki Laki" />

                <TextView
                    android:id="@+id/label_foto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/foto"
                    android:textColor="@color/primary_color"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/tv_nomor"
                    app:layout_constraintTop_toBottomOf="@+id/tv_lokasi" />

                <ImageView
                    android:id="@+id/iv_foto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/foto"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_nomor"
                    app:layout_constraintTop_toBottomOf="@+id/label_foto"
                    app:srcCompat="@drawable/ic_launcher_background"
                    tools:ignore="ImageContrastCheck" />


            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>